--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 *.css linguist-detectable=false
 *.js linguist-detectable=false
 *.cpp linguist-detectable=false
-
+*.cmake linguist-detectable=false
